# BerestaLanguage

./: CMakeLists.txt  main.cpp
BerestaApp/: CMakeLists.txt  example.beresta  main.cpp
BerestaApp/beresta/: benchmark.beresta  calculations.beresta  example.beresta  macros.beresta  main.beresta  obj_player.beresta
BerestaCore/: CMakeLists.txt
BerestaCore/api/: BerestaAPI.cpp  Export.h
BerestaCore/builtin/: Builtins.cpp  Builtins.h  CMakeLists.txt
BerestaCore/builtin/core/: BuiltinRegistry.h  BuiltinUtils.h  IBuiltinFunction.h  Matrix2D.cpp
BerestaCore/builtin/functions/array/: BuiltinArray.cpp  BuiltinArray.h
BerestaCore/builtin/functions/dictionary/: BuiltinDictionary.cpp  BuiltinDictionary.h
BerestaCore/builtin/functions/math/: BuiltinMathCore.cpp  BuiltinMathCore.h  BuiltinMathTrig.cpp  BuiltinMathTrig.h
BerestaCore/builtin/functions/matrix/: BuiltinMatrixCore.cpp  BuiltinMatrixCore.h
BerestaCore/builtin/functions/print/: BuiltinPrint.cpp  BuiltinPrint.h
BerestaCore/builtin/functions/random/: BuiltinRandom.cpp  BuiltinRandom.h
BerestaCore/diagnostics/: BaseContext.h  CMakeLists.txt  Diagnostics.h
BerestaCore/environment/: CMakeLists.txt  Environment.h
BerestaCore/frontend/diagnostics/: BaseContext.h  Diagnostics.h
BerestaCore/frontend/lexer/: Lexer.cpp  Lexer.h
BerestaCore/frontend/parser/: Expression.cpp  Expression.h  ExpressionFactory.cpp  ExpressionFactory.h  ExpressionParser.cpp  ExpressionParser.h  Parser.cpp  Parser.h  Statement.cpp  Statement.h  StatementFactory.cpp  StatementFactory.h  StatementParser.cpp  StatementParser.h  Visitors.h
BerestaCore/frontend/token/: Token.h
BerestaCore/interpreter/: CMakeLists.txt  FunctionIndex.cpp  FunctionIndex.h  Interpreter.cpp  Interpreter.h
BerestaCore/lexer/: CMakeLists.txt  Lexer.cpp  Lexer.h
BerestaCore/module/: Module.cpp  Module.h  ModuleManager.cpp  ModuleManager.h
BerestaCore/parser/: CMakeLists.txt  Evaluator.cpp  Evaluator.h  Expression.cpp  Expression.h  ExpressionParser.cpp  ExpressionParser.h  Parser.cpp  Parser.h  Statement.cpp  Statement.h  StatementParser.cpp  StatementParser.h  Visitors.h
BerestaCore/runtime/builtin/core/: BuiltinRegistry.cpp  BuiltinRegistry.h  BuiltinUtils.h  IBuiltinFunction.h  Matrix2D.h
BerestaCore/runtime/builtin/functions/array/: BuiltinArray.cpp  BuiltinArray.h
BerestaCore/runtime/builtin/functions/dictionary/: BuiltinDictionary.cpp  BuiltinDictionary.h
BerestaCore/runtime/builtin/functions/math/: BuiltinMathCore.cpp  BuiltinMathCore.h  BuiltinMathTrig.cpp  BuiltinMathTrig.h
BerestaCore/runtime/builtin/functions/matrix/: BuiltinMatrixCore.cpp  BuiltinMatrixCore.h
BerestaCore/runtime/builtin/functions/print/: BuiltinPrint.cpp  BuiltinPrint.h
BerestaCore/runtime/builtin/functions/random/: BuiltinRandom.cpp  BuiltinRandom.h
BerestaCore/runtime/environment/: Environment.cpp  Environment.h
BerestaCore/runtime/evaluator/: Evaluator.cpp  Evaluator.h
BerestaCore/runtime/value/: StructValue.cpp  StructValue.h  Value.cpp  Value.h
BerestaCore/token/: CMakeLists.txt  Token.cpp  Token.h
BerestaCore/value/: CMakeLists.txt  Value.cpp  Value.h
BerestaTest/: CMakeLists.txt
BerestaTest/frontend/lexer/: TestLexer.cpp
BerestaTest/frontend/parser/: TestExpressionParser.cpp  TestStatementParser.cpp
BerestaTest/interpreter/: TestInterpreter.cpp
BerestaTest/runtime/evaluator/: TestEvaluator.cpp
interpreter/: CMakeLists.txt  Interpreter.cpp  Interpreter.h
lexer/: CMakeLists.txt  Lexer.cpp  Lexer.h
parser/: CMakeLists.txt  Evaluator.cpp  Evaluator.h  Expression.h  ExpressionParser.cpp  ExpressionParser.h  Parser.cpp  Parser.h  Statement.h
token/: CMakeLists.txt  Token.h
value/: CMakeLists.txt
